fix: text no horizontally aligned between left side and right side of experiences section
this is potentially due to the different fonts. there's no margin-top nor padding-top on the .left to cause it to be pushed down slightly

--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ a:hover {
 
 .row .right {
     flex: 3;
+    margin-top: 5px;
 }
 
 .experience .table {
